Interpreter/test_cases/good/bool-comparison.cl
class Main inherits IO {
  main() : Object { {
    out_string(
      if false <= true then 
      "Hello, World.\n"
      else "wrong-o" fi 
      ) ; 
  } } ;
} ; 
