Interpreter/test_cases/bad/case-on-void.cl
class Main inherits IO {
   a:Object;
   
   main() : Object { {

      a <- while false loop 0 pool ;  
   
      case a of
         b : Object => true;
      esac ;
   
   } };

};
